RESOLVED FIXED71828
[CF] Speculative fix for crashes seen in DocumentWriter::deprecatedFrameEncoding
https://bugs.webkit.org/show_bug.cgi?id=71828
Summary [CF] Speculative fix for crashes seen in DocumentWriter::deprecatedFrameEncoding
Darin Adler
Reported 2011-11-08 10:05:39 PST
Speculative fix for crashes seen in DocumentWriter::deprecatedFrameEncoding
Attachments
Patch (1.46 KB, patch)
2011-11-08 10:06 PST, Darin Adler
japhet: review+
japhet: commit-queue+
Darin Adler
Comment 1 2011-11-08 10:06:33 PST
Darin Adler
Comment 2 2011-11-08 10:07:27 PST
Code is specific to PLATFORM(MAC) and PLATFORM(WIN).
Darin Adler
Comment 3 2011-11-08 10:08:04 PST
Darin Adler
Comment 4 2011-11-08 10:25:38 PST
Note You need to log in before you can comment on or make changes to this bug.