Speculative fix for crashes seen in DocumentWriter::deprecatedFrameEncoding https://bugs.webkit.org/show_bug.cgi?id=71828

Reviewed by Nate Chapin.

No new tests; not sure how to reproduce this, but crash traces indicate it
is an otherwise-harmless null dereference.

* loader/DocumentWriter.cpp:
(WebCore::DocumentWriter::deprecatedFrameEncoding):
Handle null document the same as a document without a URL.


Canonical link: https://commits.webkit.org/88161@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99591 268f45cc-cd09-0410-ab3c-d52691b4dbfc